--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "portoflio website brian langley",
   "main": "index.html",
   "scripts": {
+    "copy-dist": "cp -f ./node_modules/bootstrap/dist/css/bootstrap.min.css ./css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Brian Langley",
